# chamada

./: README.md  chamada.db  pyproject.toml  saas.db
.azure/: config
app/: app.py
app/auth/: __init__.py  auth.py  form.py
app/controllers/: __init__.py  auth.py  form.py  main.py
app/models/: __init__.py  credential.py  user.py
app/templates/: base.html  home.html  index.html  loggedIn.html  login.html  register.html
