[tool.poetry]
name = "chamada"
version = "0.1.0"
description = ""
authors = ["anasofia0 <anasofialaranja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
bootstrap-flask = "^2.2.0"
flask-wtf = "^1.1.1"
flask-sqlalchemy = "^3.0.3"
flask-login = "^0.6.2"
flask-migrate = "^4.0.4"
email-validator = "^2.0.0.post2"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
